infra/k8s/security/wazuh/route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wazuh
  namespace: wazuh
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: atoca-house-internal
      namespace: kube-system
  hostnames:
    - wazuh.atoca.house
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: wazuh-dashboard
          port: 5601
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
